---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    -
  Bugfixes:
    - Fixed that setting exact item amounts on a recipe would not calculate the percentage correctly in some cases

---------------------------------------------------------------------------------------------------
Version: 0.18.35
Date: 18. 06. 2020
  Bugfixes:
    - Fixed a bug where setting recipe percentages by defining item amounts would not apply correctly to lines with subfloors

---------------------------------------------------------------------------------------------------
Version: 0.18.34
Date: 18. 06. 2020
  Changes:
    - Made the item-percentage-utility textfield wider
    - This update includes a lot of behind-the-scenes changes, so there might be a crash or two that I haven't found yet
  Bugfixes:
    - Fixed a crash when trying to set an empty product/ingredient amount on a recipe
    - Added a missing locale key for the new pause-on-interface keyboard shortcut

---------------------------------------------------------------------------------------------------
Version: 0.18.33
Date: 16. 06. 2020
  Features:
    - Added the ability to set recipe product/byproduct/ingredient-amounts to specific values. You can do this by right-clicking any of them on a specific recipe line and entering an amount. The percentage of that line will then automatically be adjusted to produce that amount exactly.
  Changes:
    - The mod-setting for pausing the game when the main interface is open is now a button in the top right of it
    - The numbers shown on item/machine/etc-buttons are now rounded somewhat correctly, instead of being truncated
  Bugfixes:
    - Fixed that beacon selection would not work then the game was being paused on open FP-interface

---------------------------------------------------------------------------------------------------
Version: 0.18.32